# TAED2-2425q1-demos

./: .pre-commit-config.yaml  README.md  env.template  pyproject.toml
.dvc/: config
docs/: mlflow-demo.md  project-setup.md
gx/: great_expectations.yml
gx/checkpoints/: iowa_training_data_checkpoint
gx/data_docs/: index.html
gx/data_docs/expectations/: iowa_training_data_validation.html
gx/data_docs/validations/iowa_training_data_validation/__none__/20241016T103123.108799Z/: iowa_dataset-iowa_processed_data.html
gx/expectations/: .ge_store_backend_id  iowa_training_data_validation.json
gx/validation_definitions/: iowa_training_data_validator
metrics/: emissions.csv
models/: iris_LogisticRegression_model.pkl  iris_SVC_model.pkl
notebooks/: great_expectations_demo.ipynb
src/: config.py
src/app/: api.py
src/features/: prepare.py
src/models/: evaluate.py  train.py
tests/: test_api.py
tests/gx/: gx_context_configuration.py
